# roo_prefs

./: BUILD  MODULE.bazel  README.md  library.json  library.properties  roo_prefs.h
doc/: programming_guide.md
examples/Basic/: Basic.ino
src/: roo_prefs.h
src/roo_prefs/: collection.h  lazy_write_pref.h  pref.h  serialization.h  status.cpp  status.h  transaction.h
src/roo_prefs/impl/: value_holder.h
src/roo_prefs/store/: preferences_store.cpp  preferences_store.h
test/: arduino_string_pref_test.cpp  lazy_write_pref_test.cpp  prefs_test.cpp
