module(name = "roo_prefs", version = "1.2.8")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "roo_testing", version = "1.3.4")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

bazel_dep(name = "roo_backport", version = "1.2.2")
bazel_dep(name = "roo_logging", version = "1.5.5")

# Optional, for lazy-write prefs.
bazel_dep(name = "roo_scheduler", version = "2.1.8")
